<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <EditText 
        android:id="@+id/ip_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip"
        android:text="192.168.1.6"/>
    
    <EditText
        android:id="@+id/port_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:text="48745"/>
    
    <Button
        android:id="@+id/connect_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/connect"
        android:onClick="connectToServer" />
    
    <TextView 
        android:id="@+id/cpu_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView 
        android:id="@+id/mem_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    

</LinearLayout>
